Fixed images not showing up

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* Basic Resets */
 *, *::before, *::after {
     box-sizing: border-box;
     margin: 0;
@@ -7,20 +6,21 @@
 
 #promo{
     display: flex;
-    flex-wrap: wrap; /* Enable wrapping */
-    justify-content: center; /* Center content horizontally */
+    flex-wrap: wrap; 
+    justify-content: center;
     height: 400px;
 }
 
 .hero{
     position: relative;
-    background-image: url(/img/CampingSite.png);
+    background-image: url(../img/CampingSite.png);
     background-size: cover;
     background-position: center;
     width: 100%;
     
     margin-bottom: 20px;
 }
+
 
 .hero h3, h1, a{
     text-shadow: none;
@@ -41,7 +41,7 @@ body, html {
     height: 100%;
 }
 
-/* Header */
+
 header {
     display: flex;
     justify-content: space-between;
@@ -181,7 +181,7 @@ footer {
 }
 
 .f1 .img{
-        background-image: url(/img/BK_MoveHitImg.jpg);
+        background-image: url(../img/BK_MoveHitImg.jpg);
 
 }
 
@@ -190,7 +190,7 @@ footer {
 }
 
 .f2 .img {
-        background-image: url(/img/Barracks.png);
+        background-image: url(../img/Barracks.png);
 }
 
 .f3 {
@@ -198,7 +198,7 @@ footer {
 }
 
 .f3 .img {
-        background-image: url(/img/TrainFootmanCut.jpg);
+        background-image: url(../img/TrainFootmanCut.jpg);
         background-position: top center;
 }
 
@@ -207,7 +207,7 @@ footer {
 }
 
 .f4 .img {
-    background-image: url(/img/LevelUp.png);
+    background-image: url(../img/LevelUp.png);
 }
 
 .f5 {
@@ -215,7 +215,7 @@ footer {
 }
  
 .f5 .img {
-    background-image: url(/img/Shop.png);
+    background-image: url(../img/Shop.png);
 }
 
 .feature .text {
